---
sidebar: sidebar 
permalink: whats-new.html 
keywords: 'what"s new, features, new, release notes, enhancements, fixes' 
summary: Descubra las novedades de la funcionalidad de cargas de trabajo de IA de Workload Factory. 
---
= Lo nuevo
:allow-uri-read: 
:icons: font
:imagesdir: ./media/


[role="lead"]
Descubra las novedades de la funcionalidad de cargas de trabajo de IA generativas de Workload Factory.



== 7 de julio de 2024



=== Lanzamiento inicial de Workload Factory para GenAI

La versión inicial incluye la capacidad de desarrollar una base de conocimientos personalizada mediante la incorporación de los datos de la organización. La base de conocimientos puede ser accedida por una aplicación de chatbot para sus usuarios. Esta capacidad garantiza respuestas precisas y relevantes a preguntas específicas de la organización, mejorando la satisfacción y la productividad de todos sus usuarios.