@@ -388,7 +388,6 @@
   <block id="19761722f9e779bd2a70fef96c24a1bc" category="paragraph">Workload Factory publica la base de conocimientos. En la página de detalles de la base de conocimientos, el estado cambia de *No publicado* a *Publicado*</block>
   <block id="5e92f6a356303934a45930f0e541c6b1" category="paragraph">Ahora puede obtener detalles sobre el extremo único de la base de conocimientos.</block>
   <block id="004faa273ca0b2383f0f12b8850c493b" category="list-text">Junto al estado publicado, selecciona *Ver*.</block>
-  <block id="d1f4efe2fd3a800f4b008e172439fe85" category="paragraph">Detalles sobre cómo acceder a la base de conocimientos mediante las pantallas de la API de Workload Factory.</block>
   <block id="9de2775e528dfff9dd9666885c222272" category="list-text">En el cuadro de diálogo *Ver información publicada*, copie los puntos finales de la API que puede utilizar para integrar la base de conocimientos con una aplicación.</block>
   <block id="7495d9f71402d3b1d20f08bd19ac6562" category="inline-link">Documentación de API</block>
   <block id="2cb94eb0648b9f93f300ea0aff833f95" category="paragraph">Para obtener más información sobre los puntos finales de la API, vaya a<block ref="c0a9aa55ed57e2e15b2d20baa6a6e023" category="inline-link-rx"></block> y seleccione *AI &gt; Externo*.</block>
@@ -398,7 +397,6 @@
   <block id="06c2cea18679d64399783748fa367bdd" category="inline-image-macro">Una</block>
   <block id="e16edd708081c06a9c8bdef1486a94b4" category="inline-link-macro">Configure su entorno para cumplir los requisitos de GenAI</block>
   <block id="0b0e916064e065ab12e1db6735832ef0" category="paragraph-title"><block ref="58f667aaf05f87159670e12bd9bc076b" category="inline-image-macro-rx" type="image"></block> <block ref="d4a51aa0811f51e3206f49b62f46f1ef" category="inline-link-macro-rx"></block></block>
-  <block id="926f216b1b078ff9ce47e61e22932514" category="paragraph">Necesitará las credenciales de AWS para implementar la infraestructura de AWS, un sistema de archivos puesto en marcha y descubierto de FSx para ONTAP, la lista de fuentes de datos que desea integrar en su base de conocimientos, acceso al servicio de IA de Amazon Bedrock y mucho más.</block>
   <block id="aada29daee1d64ed0fe907043855cb7e" category="inline-image-macro">Dos</block>
   <block id="36ec882c51ea2d7689f78bed44b7fdaa" category="inline-link-macro">Identifique el sistema de archivos FSx para ONTAP que contiene los orígenes de datos</block>
   <block id="cc9cd1c7d0a54d3fe49ca467804963fb" category="paragraph-title"><block ref="54f425ce8d89f4ed6b8a546561af5d60" category="inline-image-macro-rx" type="image"></block> <block ref="7206191241f03719b7415c03564b4c6e" category="inline-link-macro-rx"></block></block>
@@ -539,8 +537,17 @@
   <block id="0adc03eac86772ad2c75c8f140be417e" category="sidebar">Conocimiento y apoyo</block>
   <block id="3163a16fc98aa29c5fea8b61c62bb459" category="paragraph">No hay coste por usar la capacidad GenAI de Workload Factory.</block>
   <block id="a46c34e822b00eb49125943300225ec1" category="summary">Después de construir su base de conocimientos y probar su chatbot, está listo para configurar la aplicación que permitirá a sus usuarios consultar el chatbot.</block>
-  <block id="4c096c170a3ae328a9df5fb19871a9a7" category="doc">Crear una aplicación con tecnología de una base de conocimientos de FSx para ONTAP</block>
   <block id="3034501b6830f6e24b0e219fa3565ffb" category="inline-link">Descubre cómo crear una aplicación de IA basada en RAG en FSx para ONTAP</block>
   <block id="cddb505028d2d2c7026aad1d17c19a05" category="paragraph"><block ref="cddb505028d2d2c7026aad1d17c19a05" category="inline-link-rx"></block></block>
   <block id="53b343f4a880bcff3b258324a35744ff" category="sidebar">Cree una aplicación de IA basada en RAG</block>
+  <block id="da1fd32e4f4851fbf4922d1c55e8fcc0" category="list-text">En la página de inventario de bases de conocimientos, seleccione la base de conocimientos para la que desea activar la autenticación.</block>
+  <block id="d71d72ee7bc5c79bade09f02715592c3" category="paragraph">La autenticación de la base de conocimientos ahora está activa, y puede utilizar puntos finales de API para interactuar con la base de conocimientos e integrar la base de conocimientos con una aplicación de chatbot.</block>
+  <block id="c83d7c23906c063b64dd22d30483cb24" category="list-text">Amazon Bedrock está configurado para enviar registros a Amazon CloudWatch Logs, utilizando un grupo de registros con el prefijo<block ref="26245dda4fa653114e9a41956171489d" prefix=" " category="inline-code"></block>.</block>
+  <block id="6fbe5ae14d71eb3abafcfce8f7fe977a" category="inline-link">ID de cuenta de BlueXP</block>
+  <block id="af270465b477b731bafe1e4859956cc4" category="list-text">El motor GenAI está configurado para enviar registros a Amazon CloudWatch Logs, utilizando un grupo de registros con el nombre<block ref="267ed14c989ee7da1da6b5683a1ba205" prefix=" " category="inline-code"></block>, donde<block ref="44014fe9a7dd0d34b59279b9206b84b3" prefix=" " category="inline-code"></block> es el<block ref="bffdd6286177ca86f99ccefe410268a2" category="inline-link-rx"></block> para el usuario actual.</block>
+  <block id="b3ec171bb9a8cc7c009e2caf4d945535" category="paragraph">Se muestran los detalles sobre cómo acceder a la base de conocimientos mediante la API de Workload Factory.</block>
+  <block id="f48c3e82e3f3b9cc782fe1277e362ec5" category="paragraph">Necesitará las credenciales de AWS para implementar la infraestructura de AWS, un sistema de archivos FSx para ONTAP implementado y detectado, la lista de fuentes de datos que desea integrar en su base de conocimientos, acceso al servicio de IA de Amazon Bedrock y mucho más.</block>
+  <block id="691e71734464aaf43017f5b033e54559" category="section-title">4 de agosto de 2024</block>
+  <block id="ec7827c2237ae7b863c9ba93b519cbc1" category="section-title">Integración de Amazon CloudWatch Logs</block>
+  <block id="64c1dd8cb5f86710c3293cc9807760fb" category="paragraph">Las cargas de trabajo de IA generativas ahora están integradas con Amazon CloudWatch Logs, lo que le permite supervisar los archivos de registro de las cargas de trabajo de IA generativas.</block>
 </blocks>
