@@ -15,7 +15,7 @@ Empieza a crear una base de conocimientos con los datos de tu organización que 
 
 .image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-1.png["Una"] link:requirements.html["Configure su entorno para cumplir los requisitos de GenAI"]
 [role="quick-margin-para"]
-Necesitará las credenciales de AWS para implementar la infraestructura de AWS, un sistema de archivos puesto en marcha y descubierto de FSx para ONTAP, la lista de fuentes de datos que desea integrar en su base de conocimientos, acceso al servicio de IA de Amazon Bedrock y mucho más.
+Necesitará las credenciales de AWS para implementar la infraestructura de AWS, un sistema de archivos FSx para ONTAP implementado y detectado, la lista de fuentes de datos que desea integrar en su base de conocimientos, acceso al servicio de IA de Amazon Bedrock y mucho más.
 
 .image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-2.png["Dos"] link:identify-data-sources.html["Identifique el sistema de archivos FSx para ONTAP que contiene los orígenes de datos"]
 [role="quick-margin-para"]
